[package]
name = "recursiveshadowcasting3d-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.3.2", features = ["experimental-wasm", "lazy-function-tables"]}
ndarray = "0.16.1"

[profile.dev]
debug = true

[profile.release]
lto = true
opt-level = "s" # optimize for size

[build]
# don't mangle names too much - or else emscripten gets confused
rustflags = ["-C", "symbol-mangling-version=v0"]